--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Cake shop</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -46,7 +45,14 @@
         </div>
       </div>
     </nav>
-  <h1>Cake shop</h1>
-  <h2>Livraison de desserts a domicile</h2>
+  <h1 class="titre"><strong>Cake shop</strong></h1>
+  <div class="intro">
+    <h2>Livraison de desserts a domicile</h2>
+  <p>Cake shop est une boutique en ligne pour commander de desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
+  <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement</p>
+  </div>
+
+  <center><a href="#" class="btn btn-lg btn-primary" class="btn btn-default">Commandez !</a></center>
+  <p>Cake shop est une compagnie fictive dans le cadre d'entrainement</p>
   </body>
 </html>
