--- a/informations.html
+++ b/informations.html
@@ -11,38 +11,38 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-            <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" width="90" height="45"></a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="Lesdesserts.html">Les desserts</a>
-            </li>
-            <li>
-              <a href="offresdumoment.html">Offres du moment</a>
-            </li>
-            <li>
-              <a href="informations.html"> Nous contacter</a>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Suivez-nous ! <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="https://twitter.com"> <i class="fa fa-twitter-square"></i> Twitter</a></li>
-                <li><a href="https://facebook.com"> <i class="fa fa-facebook-square"></i> Facebook</a></li>
-              </ul>
-            </li>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" width="90" height="45"></a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><span class="sr-only">(current)</span></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="Lesdesserts.html">Les Desserts</a></li>
+        <li><a href="offresdumoment.html">Formules</a></li>
+        <li><a href="informations.html">Infomations</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://www.facebook.com">Facebook</a></li>
+            <li><a href="https://www.twitter.com">Twitter</a></li>
+            <li role="separator" class="divider"></li>
           </ul>
-        </div>
-      </div>
-    </nav>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <h1 class="titre"><strong>Cake shop</strong></h1>
