--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="Lesdesserts.html">Les Desserts</a></li>
-        <li><a href="offresdumoment.html">Formules</a></li>
         <li><a href="informations.html">Infomations</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -49,7 +48,7 @@
   <div class="intro">
     <h2>Livraison de desserts a domicile</h2>
   <p>Cake shop est une boutique en ligne pour commander de desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
-  <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement</p>
+  <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement<br>Moins 15% par gateau(x) supplementaire(s) !!</p>
   </div>
 
   <center><a href="#" class="btn btn-lg btn-primary" class="btn btn-default">Commandez !</a></center>
