--- a/informations.html
+++ b/informations.html
@@ -6,43 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/informations.css">
     <title>Cake shop</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   </head>
   <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" width="90" height="45"></a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><span class="sr-only">(current)</span></a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="Lesdesserts.html">Les Desserts</a></li>
-        <li><a href="offresdumoment.html">Formules</a></li>
-        <li><a href="informations.html">Infomations</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://www.facebook.com">Facebook</a></li>
-            <li><a href="https://www.twitter.com">Twitter</a></li>
-            <li role="separator" class="divider"></li>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" width="90" height="45"></a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><span class="sr-only">(current)</span></a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="Lesdesserts.html">Les Desserts</a></li>
+          <li><a href="offresdumoment.html">Formules</a></li>
+          <li><a href="informations.html">Infomations</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="https://www.facebook.com">Facebook</a></li>
+              <li><a href="https://www.twitter.com">Twitter</a></li>
+              <li role="separator" class="divider"></li>
+            </ul>
           </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <h1 class="titre"><strong>Cake shop</strong></h1>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+      <h1 class="titre"><strong>Cake shop</strong></h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d10493.654800804235!2d2.3325926298706072!3d48.88845245378141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1simage+en+lien!5e0!3m2!1sfr!2sfr!4v1490810692264" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-sm-6 informations">
+          <p>rue orderner</p>
+          <p><strong>téléphone</strong> : 01 00 00 00 00</p>
+          <p><strong>email<strong></strong> : cake-chop@xxx.com</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
