--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement<br>Moins 15% par gateau(x) supplementaire(s) !!</p>
     </div>
     <center><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
+  Commandez !!
 </button>
 
 <!-- Modal -->
@@ -59,7 +59,6 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
         <div id="wufoo-qwysgbq02cb9um">
