--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1 class="titre"><strong>Cake shop</strong></h1>
     <div class="intro">
       <h2>Livraison de desserts a domicile</h2>
-      <p>Cake shop est une boutique en ligne pour commander de desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
+      <p>Cake shop est une boutique en ligne pour commander des desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
       <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement<br>Moins 15% par gateau(x) supplementaire(s) !!</p>
     </div>
     <center><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
