changements page desserts

--- a/Lesdesserts.html
+++ b/Lesdesserts.html
@@ -48,112 +48,112 @@
     <div class="intro">
        <h2>Les Basiques <br> supplément 3€ pour un texte ou prénom</h2>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Fondant chocolat</p>
       <p>8 pers.</p>
-      <img src="images/fondantchoco.jpeg"/>
+      <img src="images/fondantchoco.jpeg" style="width: 270px;height: 195px"/>
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Gateau a l'ananas</p>
       <p>8 pers.</p>
-      <img src="images/ananas.jpeg">
+      <img src="images/ananas.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 276px; height: 273px; padding-top: 3px;">
+    <div class="dessert">
       <p>Gateau au citron</p>
       <p>12 pers.</p>
-      <img src="images/gcitron.jpeg">
+      <img src="images/gcitron.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Marbré au chocolat</p>
       <p>8 pers.</p>
-      <img src="images/marbre.jpeg">
+      <img src="images/marbre.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Roulé a la confiture</p>
       <p>12 pers.</p>
-      <img src="images/roule.jpeg">
+      <img src="images/roule.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert" >
       <p>Tarte au pommes</p>
       <p>8 pers.</p>
-      <img src="images/tpomme.jpeg">
+      <img src="images/tpomme.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Tarte au citron meringué</p>
       <p>8 pers.</p>
-      <img src="images/tcitron.jpeg">
+      <img src="images/tcitron.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Tarte au Fraises</p>
       <p>8 pers.</p>
-      <img src="images/tfraises.jpeg">
+      <img src="images/tfraises.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Tarte banane chocolat</p>
       <p>8 pers.</p>
-      <img src="images/tbchoco.jpeg">
+      <img src="images/tbchoco.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Cheesecake au cafe</p>
       <p>8 pers.</p>
       <img src="images/cheesecakacafe.jpg" style="width: 270px;height: 195px;" >
       <p>20,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
-      <p>Cookies au pepites de chocolat</p>
-      <p>Par lot de 12</p>
+    <div class="dessert"">
+      <p>Cookies pepites de chocolat</p>
+      <p>lot de 12</p>
       <img src="images/kkpepites.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
     <div class="intro">
       <h2>Mariage <br> supplément 3€ pour un texte ou prénoms</h2>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Gateau de mariage n°1</p>
       <p>Pour 30 pers.</p>
-      <img src="images/gmariage.jpeg" style="width: 200px;height: 195px;" >
+      <img src="images/gmariage.jpeg" style="width: 270px;height: 195px"" >
       <p>28,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Gateau de mariage n°2</p>
       <p>Pour 30 pers.</p>
-      <img src="images/gm2.jpg" style="width: 200px;height: 195px;" >
+      <img src="images/gm2.jpg" style="width: 270px;height: 195px"" >
       <p>28,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Gateau de mariage n°3</p>
       <p>Pour 30 pers.</p>
-      <img src="images/gm3.jpeg" style="width: 200px;height: 195px;" >
+      <img src="images/gm3.jpeg" style="width: 270px;height: 195px";" >
       <p>28,00€</p>
     </div>
     <div class="intro">
       <h2>Anniversaires <br> supplément 3€ pour un texte ou prénom</h2>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert" >
       <p>Anniversaire n°1</p>
       <p>Pour 20 pers.</p>
-      <img src="images/afille.jpeg" style="width: 200px;height: 195px;" >
+      <img src="images/afille.jpeg" style="width: 270px;height: 195px" >
       <p>28,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Anniversaire n°2</p>
       <p>Pour 20 pers.</p>
-      <img src="images/ggarcon.jpeg" style="width: 200px;height: 195px;" >
+      <img src="images/ggarcon.jpeg" style="width: 270px;height: 195px";>
       <p>28,00€</p>
     </div>
-    <div class="dessert" style="width: 275px; height: 273px;">
+    <div class="dessert">
       <p>Anniversaire n°3</p>
       <p>Pour 20 pers.</p>
-      <img src="images/ga3.jpeg" style="width: 200px;height: 195px;" >
+      <img src="images/ga3.jpeg" style="width: 270px;height: 195px" >
       <p>28,00€</p>
     </div>
   </body>
