--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <h1 class="titre"><strong>Cake shop</strong></h1>
     <div class="intro">
-      <h2>Livraison de desserts a domicile</h2>
+      <h2>Livraison de desserts à domicile</h2>
       <p>Cake shop est une boutique en ligne pour commander des desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
       <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement<br>Moins 15% par gateau(x) supplementaire(s) !!</p>
     </div>
