--- a/Lesdesserts.html
+++ b/Lesdesserts.html
@@ -10,6 +10,7 @@
     <title>Cake shop</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+     <meta name="viewport" content="width=device-width"/>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -52,7 +53,7 @@
       <p>Fondant chocolat</p>
       <p>8 pers.</p>
       <img src="images/fondantchoco.jpeg" style="width: 270px;height: 195px"/>
-      <p>20,00€</p>
+      <p>20,00€ </p>
     </div>
     <div class="dessert">
       <p>Gateau a l'ananas</p>
