--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Cake shop</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+     <meta name="viewport" content="width=device-width"/>
   </head>
   <body>
     <nav class="navbar navbar-default">
