--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="Lesdesserts.html">Les Desserts</a></li>
         <li><a href="informations.html">Infomations</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suivez-nous! <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="https://www.facebook.com">Facebook</a></li>
             <li><a href="https://www.twitter.com">Twitter</a></li>
