--- a/Lesdesserts.html
+++ b/Lesdesserts.html
@@ -45,7 +45,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <h1 class="titre"><strong>Cake shop</strong></h1>
-    <div class="intro">
+    <div class="col-xs-10offset-2">
        <h2>Les Basiques <br> supplément 3€ pour un texte ou prénom</h2>
     </div>
     <div class="dessert">
@@ -114,7 +114,7 @@
       <img src="images/kkpepites.jpeg" style="width: 270px;height: 195px">
       <p>20,00€</p>
     </div>
-    <div class="intro">
+    <div class="col-xs-10offset-2">
       <h2>Mariage <br> supplément 3€ pour un texte ou prénoms</h2>
     </div>
     <div class="dessert">
@@ -135,7 +135,7 @@
       <img src="images/gm3.jpeg" style="width: 270px;height: 195px";" >
       <p>28,00€</p>
     </div>
-    <div class="intro">
+    <div class="col-xs-10offset-2">
       <h2>Anniversaires <br> supplément 3€ pour un texte ou prénom</h2>
     </div>
     <div class="dessert" >
