--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <h1 class="titre"><strong>Cake shop</strong></h1>
-    <div class="col-xs-10offset-2">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-10offset-2">
       <h2>Livraison de desserts à domicile</h2>
       <p>Cake shop est une boutique en ligne pour commander des desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
       <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement<br>Moins 15% par gateau(x) supplementaire(s) !!</p>
+        </div>
+      </div>
     </div>
     <center><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
   Commandez !!
