--- a/informations.html
+++ b/informations.html
@@ -47,7 +47,7 @@
       <h1 class="titre"><strong>Cake shop</strong></h1>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 maps">
           <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d10493.654800804235!2d2.3325926298706072!3d48.88845245378141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1simage+en+lien!5e0!3m2!1sfr!2sfr!4v1490810692264" width="500" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <div class="col-sm-6 informations">
