--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1 class="titre"><strong>Cake shop</strong></h1>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-10-offset-1">
+        <div class="col-xs-10">
       <h2>Livraison de desserts à domicile</h2>
       <p>Cake shop est une boutique en ligne pour commander des desserts. Suivant les périodes de l'année nous vous proposons des inédits (Noël,Pâques,..). <br>Nous pouvons aussi sur demande personnaliser certains desserts comme les gateaux avec un prénom.</p>
       <p>Cake shop utilise des produits frais et vous livre en moins d'une heure<br>Vous pouvez aussi demander une heure de livraison si vous n'êtes pas disponible immédiatement<br>Moins 15% par gateau(x) supplementaire(s) !!</p>
