--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <h1 class="titre"><strong>Cake shop</strong></h1>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-xs-10">
       <h2>Livraison de desserts à domicile</h2>
